--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -7,6 +7,35 @@ env:
   TERM: xterm-256color
 
 jobs:
+
+  black-format:
+    name: Check format with black
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: psf/black@stable
+  flake8-lint:
+    runs-on: ubuntu-latest
+    name: Lint with flake8
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - uses: py-actions/flake8@v2
+  mypy:
+    name: Type check with mypy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: snok/install-poetry@v1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'poetry'
+      - run: poetry install
+      - run: poetry run mypy .
+
   test:
     name: Tests
 
@@ -36,7 +65,7 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel: true
-  finish:
+  coveralls:
     name: Upload data to coveralls
     needs: test
     runs-on: ubuntu-latest
@@ -61,3 +90,28 @@ jobs:
           else
             exit 1
           fi
+
+
+
+  build-and-publish:
+    name: Build and publish Python distributions to PyPI and TestPyPI
+    runs-on: ubuntu-latest
+    needs:
+      - black-format
+      - flake8-lint
+      - mypy
+      - test
+    steps:
+      - uses: actions/checkout@v3
+      - uses: snok/install-poetry@v1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+          cache: 'poetry'
+      - run: poetry --version
+      - run: poetry install
+      - name: Build and publish to pypi
+        if: startsWith(github.ref, 'refs/tags')
+        uses: JRubics/poetry-publish@v1.15
+        with:
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
