--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -7,6 +7,15 @@ env:
   TERM: xterm-256color
 
 jobs:
+  pre-commit:
+    name: Pre-commit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - uses: pre-commit/action@v3.0.0
 
   black-format:
     name: Check format with black
@@ -23,6 +32,19 @@ jobs:
         with:
           python-version: "3.10"
       - uses: py-actions/flake8@v2
+  ruff-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+      - name: Run Ruff
+        run: ruff .
   mypy:
     name: Type check with mypy
     runs-on: ubuntu-latest
@@ -98,6 +120,7 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags')
     needs:
+      - pre-commit
       - black-format
       - flake8-lint
       - mypy
